fixed section spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -102,7 +102,7 @@ iframe {
 }
 
 .section {
-	padding: 0 2rem;
+	padding: 0 4rem;
 }
 
 .section__header {
